[gd_scene load_steps=7 format=2]

[ext_resource path="res://Tanks/Tank.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tanks/GunTurret.gd" type="Script" id=2]
[ext_resource path="res://Bullets/TurretBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/onlyObjects_retina_rotated.png" type="Texture" id=4]
[ext_resource path="res://UI/UnitDisplay.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 32.0

[node name="GunTurret" instance=ExtResource( 1 )]

script = ExtResource( 2 )
Bullet = ExtResource( 3 )
rotation_speed = 1.0
gun_cooldown = 0.2
max_health = 50
turret_speed = 5.0
detect_radius = 350

[node name="Body" parent="." index="0"]

texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 532, 130, 56, 56 )
_sections_unfolded = [ "Region" ]

[node name="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Turret" parent="." index="2"]

texture = ExtResource( 4 )
offset = Vector2( 20, 0 )
region_enabled = true
region_rect = Rect2( 271, 60, 64, 28 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="Muzzle" parent="Turret" index="0"]

position = Vector2( 65, 0 )
_sections_unfolded = [ "Transform" ]

[node name="DetectRadius" type="Area2D" parent="." index="6"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius" index="0"]

[node name="UnitDisplay" parent="." index="7" instance=ExtResource( 5 )]

[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]

[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]


